--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,102 +1,60 @@
-# This is a basic workflow to help you get started with Actions
+name: 1-single-file--build-and-deploy
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: main # Run workflow on PRs to the main branch.
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Run workflow on pushes to any branch.
+  push:
+
+  # Allows you to run this workflow manually from the Actions tab.
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+env:
+  artifactName: buildArtifact
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  build-and-test:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-
-  test:
-    name: Test Application
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout Code
+      - name: Checkout the repo source code
         uses: actions/checkout@v3
 
-      - name: Set Up Node.js
-        uses: actions/setup-node@v3
+      # Steps to version, build, and test the code go here.
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          node-version: '14'
+          name: ${{ env.artifactName }}
+          path: ./ # Put the path to the build artifact files directory here.
 
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run Unit Tests
-        run: npm test
-
-      - name: Run Code Quality Checks
-        run: |
-          npm run lint
-          npm run coverage
-  deploy:
-    name: Deploy to Staging
+  deploy-to-staging:
+    # 👇 Only run this deploy job after the build-and-test job completes successfully.
+    needs: build-and-test
     runs-on: ubuntu-latest
-    needs: test
+    # 👇 Only run on pushes (not PRs) or manual triggers to the main branch.
+    if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set Up Node.js
-        uses: actions/setup-node@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
-          node-version: '14'
+          name: ${{ env.artifactName }}
+          path: ./buildArtifact
 
-      - name: Install Dependencies
-        run: npm install
+      # Steps to deploy the code go here.
 
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build
-
-      - name: Deploy Application
-        run: |
-          # Deploy script or command here
-          echo "Deploying to staging environment..."
-  notify:
-    name: Notify Team
+  deploy-to-production:
+    # 👇 Only run this deploy job after the deploy-to-staging job completes successfully.
+    needs: deploy-to-staging
     runs-on: ubuntu-latest
-    needs: [build, test, deploy]
+    environment: production # Used for environment-specific variables, secrets, and approvals.
     steps:
-      - name: Notify on Failure
-        if: failure()
-        uses: peter-evans/slack-notify@v2
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
-          status: ${{ job.status }}
-          text: |
-            :warning: CI/CD Pipeline Notification
-            Build or Deployment failed in `${{ github.repository }}`
-            Check details at: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          name: ${{ env.artifactName }}
+          path: ./buildArtifact
+
+      # Steps to deploy the code go here.
+   
 
